@@ -1,30 +1,32 @@
-/*
- * Copyright 2005 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.drools.core.reteoo;
 
 import java.io.IOException;
 import java.io.ObjectInput;
 import java.io.ObjectOutput;
 
-import org.drools.core.WorkingMemory;
-import org.drools.core.rule.Declaration;
-import org.drools.core.rule.EvalCondition;
-import org.drools.core.spi.EvalExpression;
-import org.drools.core.spi.Tuple;
+import org.drools.base.base.ValueResolver;
+import org.drools.base.reteoo.BaseTuple;
+import org.drools.base.rule.Declaration;
+import org.drools.base.rule.EvalCondition;
+import org.drools.base.rule.accessor.EvalExpression;
 
 public class MockEvalCondition extends EvalCondition {
 
@@ -37,9 +39,9 @@ public class MockEvalCondition extends EvalCondition {
 
                                                       public Object createContext() { return null; }
 
-                                                      public boolean evaluate(Tuple tuple,
+                                                      public boolean evaluate(BaseTuple tuple,
                                                                               Declaration[] requiredDeclarations,
-                                                                              WorkingMemory workingMemory,
+                                                                              ValueResolver valueResolver,
                                                                               Object context ) {
                                                           return MockEvalCondition.this.isAllowed.booleanValue();
                                                       }
@@ -82,6 +84,6 @@ public class MockEvalCondition extends EvalCondition {
     }
 
     public void setIsAllowed(final boolean isAllowed) {
-        this.isAllowed = new Boolean( isAllowed );
+        this.isAllowed = Boolean.valueOf( isAllowed );
     }
 }
