@@ -1,29 +1,32 @@
-/*
- * Copyright 2012 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.drools.decisiontable.parser;
 
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Comparator;
 import java.util.HashMap;
-import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.TreeSet;
 
-import org.drools.decisiontable.parser.RuleSheetParserUtil;
 import org.drools.decisiontable.parser.xls.PropertiesSheetListener;
 import org.drools.decisiontable.parser.xls.PropertiesSheetListener.CaseInsensitiveMap;
 import org.drools.template.model.Condition;
@@ -33,7 +36,10 @@ import org.drools.template.model.Import;
 import org.drools.template.model.Package;
 import org.drools.template.model.Rule;
 import org.drools.template.parser.DecisionTableParseException;
+
 import static org.drools.decisiontable.parser.ActionType.Code;
+import static org.drools.template.model.Rule.MAX_ROWS;
+import static org.drools.util.StringUtils.replaceOutOfQuotes;
 
 /**
  * An object of this class is prepared to receive calls passing it the
@@ -71,12 +77,18 @@ implements RuleSheetListener {
     public static final String            QUERIES_TAG            = "Queries";
     public static final String            FUNCTIONS_TAG          = "Functions";
     public static final String            DECLARES_TAG           = "Declare";
+    public static final String            UNIT_TAG               = "Unit";
     public static final String            IMPORT_TAG             = "Import";
     public static final String            SEQUENTIAL_FLAG        = "Sequential";
     public static final String            ESCAPE_QUOTES_FLAG     = "EscapeQuotes";
+    public static final String            MIN_SALIENCE_TAG       = "SequentialMinPriority";
+    public static final String            MAX_SALIENCE_TAG       = "SequentialMaxPriority";
+    public static final String            NUMERIC_DISABLED_FLAG  = "NumericDisabled";
+    public static final String            IGNORE_NUMERIC_FORMAT_FLAG     = "IgnoreNumericFormat";
     public static final String            VARIABLES_TAG          = "Variables";
     public static final String            RULE_TABLE_TAG         = "ruletable";
     public static final String            RULESET_TAG            = "RuleSet";
+    public static final String            DIALECT_TAG            = "Dialect";
     private static final int              ACTION_ROW             = 1;
     private static final int              OBJECT_TYPE_ROW        = 2;
     private static final int              CODE_ROW               = 3;
@@ -91,33 +103,39 @@ implements RuleSheetListener {
     private String                        _currentRulePrefix;
     private boolean                       _currentSequentialFlag   = false;                       // indicates that we are in sequential mode
     private boolean                       _currentEscapeQuotesFlag = true;                        // indicates that we are escaping quotes
-    
+    private boolean                       _currentNumericDisabledFlag = false;                    // indicates that we use String instead of double
+    private boolean                       _currentIgnoreNumericFormatFlag = false;                 // indicates that we don't use formatter for numeric value (except "General")
+    private int                           _currentSalience = MAX_ROWS;                            // set to the start value of the salience and decremented for each row
+    private int                           _minSalienceTag = 0;                                    // used to check if this minimum salience value is not violated
+
     //accumulated output
     private Map<Integer, ActionType>       _actions;
-    private final HashMap<Integer, String> _cellComments          = new HashMap<Integer, String>();
-    private final List<Rule>               _ruleList              = new LinkedList<Rule>();
+    private final HashMap<Integer, String> _cellComments          = new HashMap<>();
+    private final List<Rule>               _ruleList              = new ArrayList<>();
 
     //need to keep an ordered list of this to make conditions appear in the right order
-    private List<SourceBuilder>            sourceBuilders         = new ArrayList<SourceBuilder>();
+    private Collection<SourceBuilder>     sourceBuilders;
 
     private final PropertiesSheetListener _propertiesListener     = new PropertiesSheetListener();
 
-    private boolean showPackage;
+    private final boolean showPackage;
+    private final boolean trimCell;
     private String worksheetName = null;
 
     /**
      * Constructor.
      */
     public DefaultRuleSheetListener() {
-        this( true );
+        this( true, true );
     }
 
     /**
      * Constructor.
      * @param showPackage if true, the rule set name is passed to the resulting package
      */
-    public DefaultRuleSheetListener(boolean showPackage) {
+    public DefaultRuleSheetListener(boolean showPackage, boolean trimCell) {
         this.showPackage = showPackage;
+        this.trimCell = trimCell;
     }
 
     public void setWorksheetName(String worksheetName) {
@@ -138,8 +156,7 @@ implements RuleSheetListener {
         if ( this._ruleList.isEmpty() ) {
             throw new DecisionTableParseException( "No RuleTable cells in spreadsheet." );
         }
-        final Package ruleset = buildRuleSet();
-        return ruleset;
+        return buildRuleSet();
     }
 
     /**
@@ -158,6 +175,16 @@ implements RuleSheetListener {
         final Package ruleset = new Package( (showPackage) ? rulesetName : null );
         for ( Rule rule : this._ruleList ) {
             ruleset.addRule( rule );
+        }
+
+        List<String> units = getProperties().getProperty( UNIT_TAG );
+        if (units != null && !units.isEmpty()) {
+            ruleset.setRuleUnit( units.get( 0 ) );
+        }
+
+        List<String> dialects = getProperties().getProperty( DIALECT_TAG );
+        if (dialects != null && !dialects.isEmpty()) {
+            ruleset.setDialect( dialects.get( 0 ) );
         }
 
         final List<Import> importList = RuleSheetParserUtil.getImportList( getProperties().getProperty( IMPORT_TAG ) );
@@ -203,7 +230,7 @@ implements RuleSheetListener {
                 switch( code ){
                 case SALIENCE:
                     try {
-                        ruleset.setSalience( new Integer( value ) );
+                        ruleset.setSalience( Integer.valueOf( value ) );
                     } catch( NumberFormatException nfe ){
                         throw new DecisionTableParseException( "Priority is not an integer literal, in cell " +
                                 getProperties().getSinglePropertyCell( code.getColHeader() ) );
@@ -211,7 +238,7 @@ implements RuleSheetListener {
                     break;
                 case DURATION:
                     try {
-                        ruleset.setDuration( new Long( value ) );
+                        ruleset.setDuration( Long.valueOf( value ) );
                     } catch( NumberFormatException nfe ){
                         throw new DecisionTableParseException( "Duration is not an integer literal, in cell " +
                                 getProperties().getSinglePropertyCell( code.getColHeader() )  );
@@ -284,7 +311,9 @@ implements RuleSheetListener {
      */
     public void newRow(final int rowNumber,
             final int columns) {
-        if ( _currentRule != null ) flushRule();
+        if ( _currentRule != null ) {
+            flushRule();
+        }
         // nothing to see here... these aren't the droids your looking for..
         // move along...
     }
@@ -294,28 +323,29 @@ implements RuleSheetListener {
      * As when there are merged/spanned cells, they may be left out.
      */
     private void flushRule() {
-        for ( Iterator<SourceBuilder> iter = sourceBuilders.iterator(); iter.hasNext(); ) {
-            SourceBuilder src = iter.next();
+        if ( sourceBuilders == null ) {
+            return;
+        }
+        for ( SourceBuilder src : sourceBuilders ) {
             if ( src.hasValues() ) {
-                switch( src.getActionTypeCode() ){
-                case CONDITION:
-                    Condition cond = new Condition();
-                    cond.setSnippet( src.getResult() );
-                    _currentRule.addCondition( cond );
-                    break;
-                case ACTION:
-                    Consequence cons = new Consequence();
-                    cons.setSnippet( src.getResult() );
-                    _currentRule.addConsequence( cons );
-                    break;
-                case METADATA:
-                    _currentRule.addMetadata( src.getResult() );
-                    break;
+                switch ( src.getActionTypeCode() ) {
+                    case CONDITION:
+                        Condition cond = new Condition();
+                        cond.setSnippet( replaceOutOfQuotes( src.getResult(), "\\n", " " ) );
+                        _currentRule.addCondition( cond );
+                        break;
+                    case ACTION:
+                        Consequence cons = new Consequence();
+                        cons.setSnippet( replaceOutOfQuotes( src.getResult(), "\\n", " " ) );
+                        _currentRule.addConsequence( cons );
+                        break;
+                    case METADATA:
+                        _currentRule.addMetadata( src.getResult() );
+                        break;
                 }
                 src.clearValues();
             }
         }
-
     }
 
     /*
@@ -344,12 +374,13 @@ implements RuleSheetListener {
      * This gets called each time a "new" rule table is found.
      */
     private void initRuleTable(final int row,
-            final int column,
-            final String value) {
+                               final int column,
+                               final String value,
+                               boolean firstTable) {
         preInitRuleTable( row, column, value );
         this._isInRuleTable = true;
-        this._actions = new HashMap<Integer, ActionType>();
-        this.sourceBuilders = new ArrayList<SourceBuilder>();
+        this._actions = new HashMap<>();
+        this.sourceBuilders = new TreeSet<>(Comparator.comparing( SourceBuilder::getColumn ));
         this._ruleStartColumn = column;
         this._ruleStartRow = row;
         this._ruleRow = row + LABEL_ROW + 1;
@@ -360,8 +391,16 @@ implements RuleSheetListener {
         if (this.worksheetName != null) {
             this._currentRulePrefix += " " + worksheetName;
         }
-        this._currentSequentialFlag = getSequentialFlag();
-        this._currentEscapeQuotesFlag = getEscapeQuotesFlag();
+
+        this._currentSequentialFlag = getFlagValue(SEQUENTIAL_FLAG, false);
+        this._currentEscapeQuotesFlag = getFlagValue(ESCAPE_QUOTES_FLAG, true);
+        this._currentNumericDisabledFlag = getFlagValue(NUMERIC_DISABLED_FLAG, false);
+        this._currentIgnoreNumericFormatFlag = getFlagValue(IGNORE_NUMERIC_FORMAT_FLAG, false);
+
+        if (firstTable) {
+            this._currentSalience = getNumericValue( MAX_SALIENCE_TAG, this._currentSalience );
+            this._minSalienceTag = getNumericValue( MIN_SALIENCE_TAG, this._minSalienceTag );
+        }
 
         String headCell = RuleSheetParserUtil.rc2name( this._ruleStartRow, this._ruleStartColumn );
         String ruleCell = RuleSheetParserUtil.rc2name( this._ruleRow, this._ruleStartColumn );
@@ -394,14 +433,16 @@ implements RuleSheetListener {
             String value) {
     }
 
-    private boolean getSequentialFlag() {
-        final String seqFlag = getProperties().getSingleProperty( SEQUENTIAL_FLAG, "false" );
-        return RuleSheetParserUtil.isStringMeaningTrue( seqFlag );
+    private boolean getFlagValue(String name, boolean defaultValue) {
+        return RuleSheetParserUtil.isStringMeaningTrue( getProperties().getSingleProperty( name, "" + defaultValue ) );
     }
-    
-    private boolean getEscapeQuotesFlag() {
-        final String escFlag = getProperties().getSingleProperty( ESCAPE_QUOTES_FLAG, "true" );
-        return RuleSheetParserUtil.isStringMeaningTrue( escFlag );
+
+    private int getNumericValue(String name, int defaultValue) {
+        try {
+            return Integer.parseInt( getProperties().getSingleProperty( name, "" + defaultValue ) );
+        } catch (NumberFormatException nfe) {
+            throw new DecisionTableParseException( "Invalid numeric value for option: " + name, nfe );
+        }
     }
 
     private void finishRuleTable() {
@@ -416,8 +457,8 @@ implements RuleSheetListener {
             final int column,
             final String value) {
         String testVal = value.trim().toLowerCase();
-        if ( testVal.startsWith( RULE_TABLE_TAG ) ) {
-            initRuleTable( row, column, value.trim() );
+        if (isRuleTable(testVal)) {
+            initRuleTable( row, column, value.trim(), true );
         } else {
             this._propertiesListener.newCell( row, column, value, RuleSheetListener.NON_MERGED );
         }
@@ -427,11 +468,11 @@ implements RuleSheetListener {
             final int column,
             final String value,
             final int mergedColStart) {
-        String trimVal = value.trim();
+        String trimVal = trimCell ? value.trim() : value;
         String testVal = trimVal.toLowerCase();
-        if ( testVal.startsWith( RULE_TABLE_TAG ) ) {
+        if (isRuleTable(testVal)) {
             finishRuleTable();
-            initRuleTable( row, column, trimVal );
+            initRuleTable( row, column, trimVal, false );
             return;
         }
 
@@ -468,6 +509,10 @@ implements RuleSheetListener {
         }
     }
 
+    private boolean isRuleTable(final String testVal) {
+        return Objects.equals(RULE_TABLE_TAG, testVal) || testVal.startsWith(RULE_TABLE_TAG + " ");
+    }
+
     /**
      * This is for handling a row where an object declaration may appear,
      * this is the row immediately above the snippets.
@@ -480,7 +525,7 @@ implements RuleSheetListener {
             final int column,
             final String value,
             final int mergedColStart) {
-        if ( value.indexOf( "$param" ) > -1 || value.indexOf( "$1" ) > -1 ) {
+        if ( value.contains( "$param" ) || value.contains( "$1" ) ) {
             throw new DecisionTableParseException( "It looks like you have snippets in the row that is " +
                     "meant for object declarations." + " Please insert an additional row before the snippets, " +
                     "at cell " + RuleSheetParserUtil.rc2name( row, column ) );
@@ -552,16 +597,16 @@ implements RuleSheetListener {
 
         if ( ! value.trim().equals( "" ) && (actionType.getCode() == Code.ACTION ||
                 actionType.getCode() == Code.CONDITION) ) {
-            this._cellComments.put( new Integer( column ), value );
+            this._cellComments.put( column, value );
         } else {
-            this._cellComments.put( new Integer( column ),
+            this._cellComments.put( column,
                     "From cell: " + RuleSheetParserUtil.rc2name( row, column ) );
         }
     }
 
     private ActionType getActionForColumn(final int row,
             final int column) {
-        final ActionType actionType = this._actions.get( new Integer( column ) );
+        final ActionType actionType = this._actions.get( column );
 
         if ( actionType == null ) {
             throw new DecisionTableParseException( "Code description in cell " +
@@ -603,7 +648,7 @@ implements RuleSheetListener {
                         RuleSheetParserUtil.rc2name( row, column ) +
                         " has an empty column header." );
             }
-            actionType.addCellValue( row, column, value, _currentEscapeQuotesFlag );
+            actionType.addCellValue( row, column, value, _currentEscapeQuotesFlag, trimCell );
             break;
         case SALIENCE:
             // Only if rule set is not sequential!
@@ -612,7 +657,7 @@ implements RuleSheetListener {
                     this._currentRule.setSalience( value );
                 } else {
                     try {
-                        this._currentRule.setSalience( new Integer( value ) );
+                        this._currentRule.setSalience( Integer.valueOf( value ) );
                     } catch( NumberFormatException nfe ){
                         throw new DecisionTableParseException( "Priority is not an integer literal, in cell " +
                                 RuleSheetParserUtil.rc2name( row, column ) );
@@ -646,7 +691,7 @@ implements RuleSheetListener {
             break;
         case DURATION:
             try {
-                this._currentRule.setDuration( new Long( value ) );
+                this._currentRule.setDuration( Long.valueOf( value ) );
             } catch( NumberFormatException nfe ){
                 throw new DecisionTableParseException( "Duration is not an integer literal, in cell " +
                         RuleSheetParserUtil.rc2name( row, column ) );
@@ -673,7 +718,10 @@ implements RuleSheetListener {
     private Rule createNewRuleForRow(final int row, final String headCell, final String ruleCell ) {
         Integer salience = null;
         if ( this._currentSequentialFlag ) {
-            salience = new Integer( Rule.calcSalience( row ) );
+            salience = _currentSalience--;
+            if (salience < _minSalienceTag) {
+                throw new DecisionTableParseException( "Salience less than the minimum specified on row: " + row );
+            }
         }
         final int spreadsheetRow = row + 1;
         final String name = this._currentRulePrefix + "_" + spreadsheetRow;
@@ -687,4 +735,11 @@ implements RuleSheetListener {
         return value == null || "".equals( value.trim() );
     }
 
+    public boolean isNumericDisabled() {
+        return _currentNumericDisabledFlag;
+    }
+
+    public boolean doesIgnoreNumericFormat() {
+        return _currentIgnoreNumericFormatFlag;
+    }
 }
